# Alfred

./: .gitignore  .gitmodules  CMakeLists.txt  PortAudio.cmake  README.md  Whisper.cmake
include/: AudioDefs.h  AudioRecorder.h
src/: AudioRecorder.cpp  main.cpp
